tests/golden/parse_errors/field_missing_name.cd
struct Person { name: string }
let value = Person { name: "Ada" };
print value.;
