tests/golden/parse_errors/field_missing_name.err
Parse error at 3:13: expected field name after `.`, found Semicolon `;`
  print value.;
              ^
